# benchmark

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  benchmark.h
examples/: CMakeLists.txt  example1.cpp
include/: benchmark.h
include/benchmark/: benchmark.h
include/benchmark/detail/: benchmark_setup.h  chrono_utils.h  colorization.h  config.h  cpu_info.h  state.h  statistics.h
include/detail/: config.h  cpu_scaling.h  dont_optimize.h  program_arguments.h  sample_timer.h  state.h  statistics.h  variables.h
src/: benchmark.cpp
tests/: CMakeLists.txt  tests.cpp
